# workspace-qdrant-mcp

./: .coverage  .coverage.nAragorn.37202.XOZPFobx  .dockerignore  .env.example  .file_watch_cache.json  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .ignore  .mcp.json  .memexd-fastembed.yaml  .pre-commit-config.yaml  .releaserc.json  .wqmignore  20240924-1402_test_performance_optimizer.py  20241213-1823_mcp_protocol_validation.py  20241213-1823_performance_benchmark.py  20241213-1823_test_third_party_suppression.py  20241217-1800_TASK_258_4_COMPLETION_SUMMARY.md  20241217-1800_sequential_thinking_task_258_4.md  20241217-1800_test_enhanced_web_crawler.py  20241217-1800_test_web_parser_edge_cases.py  20241217-1800_web_crawler_enhancements.py  20241217-1803_TASK_258_5_COMPLETION_SUMMARY.md  20241217-1813_sequential_thinking_task_258_6.md  20241217-1834_TASK_258_6_COMPLETION_SUMMARY.md  20241221-1148_cross_platform_safety_validation_report.md  20241224-1545_message_validation_comprehensive_tests.rs  20241225-1020_deployment_automation.py  20241225-1020_infrastructure_provisioning.py  20241225-1020_release_management.py  20241225-1020_test_deployment_automation.py  20241225-1020_test_infrastructure_provisioning.py  20241225-1020_test_release_management.py  20250106-1142_FINAL_TEST_REPORT.md  20250106-1142_bug_fix_validation_report.md  20250106-1142_comprehensive_bug_fix_test.py  20250106-1142_comprehensive_bug_fix_test_fixed.py  20250106-1142_parameter_test.py  (+968 more)
rust-engine/: 20250129-2040_config_analysis_report.md  20250129-2310_config_refactor_summary.md  20250908-1600_executive_summary.md  20250908-1610_tool_simplification_strategy.md  20250908-1635_simplified_tools_test.py  20250908-1645_subtask_108_2_completion_report.md  20250922-1633_rust_coverage_baseline_achieved.md  20250923-1610_additional_coverage_tests.rs  20250923-1935_STREAMING_INTEGRATION_COMPLETE.md  20250923-2226_FILESYSTEM_MONITORING_COMPLETE.md  20250924-1345_TESTING_GUIDE.md  20250927-1540_config_test_results.md  20250927-1540_simple_config_test.yaml  20250927-1946_corrected_config.yaml  20250927-1947_config_fix_summary.md  20250927-2141_minimal_test.rs  20250927-2141_test_config_simple.yaml  20250927-2143_working_config.yaml  20250927-2145_final_working_config.yaml  20250927-2147_SUCCESS_SUMMARY.md  Cargo.toml  Cargo.toml.old  GITHUB_ISSUES.md  RUST_COMPATIBILITY.md  build.rs  build_rs_cov.profraw  cobertura.xml  coverage_results.txt  rust-toolchain.toml
rust-engine/.cargo/: config.toml
rust-engine/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feedback.yml
rust-engine/.github/workflows/: issue_management.yml
rust-engine/benches/: 20250924-1320_ffi_performance_benchmarks.rs  20250924-1330_performance_regression_tests.rs  processing_benchmarks.rs
rust-engine/core/: Cargo.toml
rust-engine/core/benches/: platform_benchmarks.rs  watching_benchmarks.rs
rust-engine/core/src/: config.rs  embedding.rs  error.rs  ipc.rs  lib.rs  logging.rs  processing.rs  service_discovery.rs  storage.rs  watching.rs
rust-engine/core/tests/: embedding_basic_test.rs  file_watching_tests.rs  hybrid_search_comprehensive_tests.rs  integration_tests.rs
rust-engine/coverage/: tarpaulin-report.html  tarpaulin-report.json
rust-engine/grpc/: Cargo.toml  build.rs
rust-engine/grpc/src/: lib.rs  service.rs
rust-engine/proto/: ingestion.proto  workspace_daemon.proto
rust-engine/python-bindings/: Cargo.toml
rust-engine/python-bindings/src/: lib.rs
rust-engine/scripts/: 20250924-1340_run_comprehensive_tests.sh  run_grpc_coverage.sh
rust-engine/src/: config.rs  config_full.rs  error.rs  lib.rs  main.rs  memory.rs
rust-engine/src/daemon/: core.rs  file_ops.rs  fs_compat.rs  mod.rs  processing.rs  runtime.rs  state.rs  watcher.rs  watcher_performance.rs.disabled
rust-engine/src/grpc/: alerting.rs  circuit_breaker.rs  client.rs  health.rs  health_integration.rs  health_service.rs  message_validation.rs  middleware.rs  mod.rs  retry.rs  security.rs  server.rs  service_monitors.rs  shared_test_utils.rs  streaming.rs  transport.rs
rust-engine/src/qdrant/: client.rs  config.rs  error.rs  mod.rs  operations.rs
rust-engine/tests/: 20250923-1702_tokio_runtime_integration.rs  20250923-1813_async_daemon_comprehensive_tests.rs  20250923-1818_grpc_streaming_integration.rs  20250923-1859_grpc_client_server_minimal.rs  20250923-1910_comprehensive_grpc_integration.rs  20250923-1930_streaming_grpc_implementation.rs  20250923-2121_grpc_connection_integration.rs  20250923-2122_grpc_performance_integration.rs  20250923-2149_directory_watching_comprehensive.rs  20250923-2151_symlink_special_file_comprehensive.rs  20250923-2152_symlink_minimal_test.rs  20250923-2200_event_debouncing_filtering.rs  20250923-2205_basic_debouncing_test.rs  20250923-2210_minimal_debouncing_test.rs  20250923-2226_comprehensive_error_handling.rs  20250923-2230_file_system_watcher_comprehensive_tests.rs  20250923-2240_file_system_basic_tests.rs  20250923-2249_qdrant_client_comprehensive_tests.rs  20250923-2300_qdrant_client_comprehensive_tests.rs  20250923-2305_qdrant_unit_tests.rs  20250923-2310_qdrant_basic_validation_tests.rs  20250924-1310_cross_platform_tests.rs  20250924-1315_memory_safety_validation.rs  20250924-1325_thread_safety_validation.rs  20250924-1335_edge_case_comprehensive_tests.rs  20250926-1707_working_core_tests.rs  20250927-0850_cli_functional_tests.rs  20250929-2330_edge_case_test_findings.md  20250929-2342_file_watching_test_coverage.md  README_gRPC_Tests.md  async_error_core.rs  async_error_handling.rs  async_error_handling.rs.disabled  async_error_handling_basic.rs.disabled  async_file_operations_integration.rs  async_grpc_handlers.rs  async_grpc_handlers.rs.disabled  basic_coverage.rs  daemon_coverage.rs  error_coverage.rs  (+30 more)
rust-engine/tests/functional/: test_service_integration.rs
src/rust/: Cargo.toml  about.hbs  about.toml
src/rust/cli/: Cargo.toml  build.rs
src/rust/client/: Cargo.toml
src/rust/common/: Cargo.toml  build.rs
src/rust/common-node/: Cargo.toml  index.d.ts  index.js  package.json
(+5881 files in other folders)
