[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "workspace-qdrant-mcp"
version = "0.2.0"
description = "Project-scoped Qdrant MCP server with scratchbook functionality"
authors = [
  { name = "Christian C. Berclaz", email = "christian.berclaz@mac.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=0.3.0",
  "qdrant-client>=1.7.0",
  "fastembed>=0.2.0",
  "GitPython>=3.1.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "chardet>=5.0.0",
  "pypdf>=4.0.0",
  "psutil>=5.8.0",
  "tqdm>=4.67.1",
  "grpcio>=1.60.0",
  "grpcio-tools>=1.60.0",
  "watchfiles>=0.21.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.6",
  # Document parsers for extended file type support
  "python-docx>=1.1.0",      # DOCX documents
  "python-pptx>=0.6.23",     # PPTX presentations  
  "ebooklib>=0.18",          # EPUB ebooks
  "python-magic>=0.4.27",    # File type detection
  "beautifulsoup4>=4.12.0",  # HTML parsing
  "lxml>=4.9.0",             # XML/HTML processing
  "markdown>=3.5.0",         # Enhanced markdown support
  "pygments>=2.16.0",        # Code syntax highlighting
  "structlog>=23.0.0",       # Structured logging support
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.11.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.3.0",
  "pytest-timeout>=2.1.0",
  "pytest-benchmark>=4.0.0",
  "httpx>=0.24.0",
  "respx>=0.20.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "pydocstyle>=6.0.0",
  "docstring-parser>=0.15",
  "scikit-learn>=1.0.0",
  "rank-bm25>=0.2.2",
  "nltk>=3.8.1",
  # Type stubs for mypy
  "types-PyYAML>=6.0.0",
  "types-Markdown>=3.4.0",
  "types-psutil>=5.8.0",
]
full = ["markdown>=3.4.0", "PyYAML>=6.0.0", "pypdf>=4.0.0"]

[project.scripts]
workspace-qdrant-mcp = "workspace_qdrant_mcp.server:main"
wqm = "workspace_qdrant_mcp.cli.main:cli"
wqutil = "workspace_qdrant_mcp.utils.admin_cli:admin_cli"
workspace-qdrant-validate = "workspace_qdrant_mcp.utils.config_validator:validate_config_cli"
workspace-qdrant-admin = "workspace_qdrant_mcp.utils.admin_cli:admin_cli"
workspace-qdrant-ingest = "workspace_qdrant_mcp.cli.ingest:main"
workspace-qdrant-setup = "workspace_qdrant_mcp.cli.setup:main"
workspace-qdrant-test = "workspace_qdrant_mcp.cli.diagnostics:main"
workspace-qdrant-health = "workspace_qdrant_mcp.cli.health:main"

[project.urls]
Homepage = "https://github.com/ChrisGVE/workspace-qdrant-mcp"
Repository = "https://github.com/ChrisGVE/workspace-qdrant-mcp"
Issues = "https://github.com/ChrisGVE/workspace-qdrant-mcp/issues"
Changelog = "https://github.com/ChrisGVE/workspace-qdrant-mcp/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/workspace_qdrant_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/workspace_qdrant_mcp"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "UP"]
ignore = [
  "E501",    # Line too long - let formatter handle this
  "S101",    # Use of assert detected - acceptable in tests
  "S110",    # try-except-pass - sometimes necessary
  "C901",    # Function too complex - diagnostics function is inherently complex
  "PLR0913", # Too many arguments - sometimes necessary
  "PLR0915", # Too many statements - sometimes necessary  
  "PLC0415", # Import should be at top level - sometimes imports need to be conditional
  "E722",    # Bare except - sometimes necessary for diagnostics
  "B023",    # Function definition does not bind loop variable - acceptable in tests/async code
  "B008",    # Do not perform function calls in argument defaults - common typer pattern
  "E741",    # Ambiguous variable name - sometimes acceptable in short contexts
  "F401",    # Imported but unused - sometimes imports are for availability checking
  "F821",    # Undefined name - may be false positive in test contexts
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = false
allow_untyped_defs = true
allow_incomplete_defs = true
exclude = [".venv/", "build/", "dist/"]

[tool.pydocstyle]
# Focus on critical documentation issues only
convention = "pep257"
add-ignore = [
    "D202",  # No blank lines allowed after function docstring - too strict for existing code
    "D204",  # 1 blank line required after class docstring - we fixed the main ones  
    "D401",  # First line should be in imperative mood - too strict for factory functions
    "D107",  # Missing docstring in __init__ - not critical for internal classes
    "D105",  # Missing docstring in magic method - not critical
    "D102",  # Missing docstring in public method - focus on classes and functions first
    "D400",  # First line should end with a period - minor formatting issue
    "D205",  # 1 blank line required between summary line and description - formatting
]
# Only check critical violations that indicate missing or broken documentation
match-dir = "src/workspace_qdrant_mcp"
ignore-decorators = "property"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --cov=src/workspace_qdrant_mcp --cov-report=term-missing --cov-report=html --cov-fail-under=5"
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "e2e: End-to-end tests",
  "slow: Slow running tests",
  "performance: Performance and benchmark tests",
  "requires_qdrant: Tests requiring Qdrant server",
  "requires_git: Tests requiring Git repository",
]
timeout = 300
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "pass",
]

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "nltk>=3.9.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-timeout>=2.4.0",
    "rank-bm25>=0.2.2",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "typer>=0.16.1",
]

# Maturin configuration for Rust integration
[tool.maturin]
module-name = "workspace_qdrant_mcp._rust_engine"
manifest-path = "rust-engine/python-bindings/Cargo.toml"
python-source = "src"

# Platform-specific optimizations
[tool.maturin.target.x86_64-apple-darwin]
rustflags = ["-C", "target-cpu=native"]

[tool.maturin.target.aarch64-apple-darwin]
rustflags = ["-C", "target-cpu=native"]

[tool.maturin.target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-cpu=native"]

[tool.maturin.target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-cpu=native"]

[tool.maturin.target.aarch64-pc-windows-msvc]
rustflags = ["-C", "target-cpu=native"]