[workspace]
members = [
    "core",
    "grpc", 
    "python-bindings",
]
resolver = "2"

# Enable LTO for release builds
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Optimize for size in release
[profile.release-small]
inherits = "release"
opt-level = "s"

# Development profile with faster compilation
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

# Workspace-level dependencies that crates can inherit
[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.35", features = [
    "rt-multi-thread", "macros", "time", "fs", "process", "signal",
    "sync", "io-std", "io-util", "net", "parking_lot"
]}
tokio-util = { version = "0.7", features = ["codec", "time"] }
tokio-stream = "0.1"

# gRPC and networking
tonic = { version = "0.10", features = ["tls", "tls-roots", "compression"] }
prost = "0.12"
prost-types = "0.12"

# Serialization and configuration
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Utilities and data structures
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = { version = "0.1", features = ["log", "attributes", "std"] }

# Python integration
pyo3 = { version = "0.20", features = ["extension-module", "abi3"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]