[package]
name = "workspace-qdrant-daemon"
version = "0.3.0"
edition = "2021"
authors = ["Workspace Qdrant Team"]
description = "High-performance Rust daemon for workspace document processing and vector search"
license = "MIT"
repository = "https://github.com/workspace-qdrant-mcp/workspace-qdrant-mcp"

[[bin]]
name = "workspace-qdrant-daemon"
path = "src/main.rs"

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate", "macros"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# File system watching
notify = "6.0"
walkdir = "2.0"

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json"] }

# Metrics and monitoring
prometheus = { version = "0.13", optional = true }
once_cell = "1.0"

# Git operations
git2 = "0.18"

# Performance
dashmap = "6.0"
parking_lot = "0.12"

# Hashing for content deduplication
blake3 = "1.0"

# Compression
flate2 = "1.0"

# Connection pooling
deadpool = "0.12"

# Additional dependencies
tonic-reflection = "0.12"
num_cpus = "1.0"
hostname = "0.4"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
assert_matches = "1.5"
futures-util = "0.3"

[features]
default = ["sqlite"]
sqlite = []
metrics = ["prometheus"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
