[package]
name = "workspace-qdrant-daemon"
version = "0.3.0"
edition = "2021"
authors = ["Workspace Qdrant Team"]
description = "High-performance Rust daemon for workspace document processing and vector search"
license = "MIT"
repository = "https://github.com/workspace-qdrant-mcp/workspace-qdrant-mcp"

[lib]
name = "workspace_qdrant_daemon"
path = "src/lib.rs"

[[bin]]
name = "workspace-qdrant-daemon"
path = "src/main.rs"

[[bench]]
name = "processing_benchmarks"
harness = false

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
tower = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate", "macros"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Qdrant client
qdrant-client = "1.9.0"

# File system watching
notify = "6.0"
walkdir = "2.0"
glob = "0.3"

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json"] }

# Metrics and monitoring
prometheus = { version = "0.13", optional = true }
once_cell = "1.0"

# Git operations
git2 = "0.18"

# System calls for Unix file operations
libc = "0.2"

# Performance
dashmap = "6.0"
parking_lot = "0.12"

# Hashing for content deduplication
blake3 = "1.0"

# Compression
flate2 = "1.0"

# Connection pooling
deadpool = "0.12"

# Additional dependencies
tonic-reflection = "0.12"
num_cpus = "1.0"
hostname = "0.4"
rand = "0.8"
async-trait = "0.1"

# Security dependencies
base64 = "0.22"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
# Basic testing utilities
tempfile = "3.0"
tokio-test = "0.4"
assert_matches = "1.5"

# Functional testing frameworks
testcontainers = "0.15"        # Isolated service testing
testcontainers-modules = { version = "0.3", features = ["postgres"] }  # Qdrant testcontainer support
criterion = { version = "0.5", features = ["html_reports"] }  # Performance benchmarking
proptest = "1.0"               # Property-based testing

# Additional testing utilities
rstest = "0.18"               # Parameterized tests
serial_test = "3.0"           # Serial test execution
wiremock = "0.5"              # HTTP mocking
rand = "0.8"                  # Random number generation for tests

# gRPC integration testing
tonic-reflection = "0.12"      # gRPC reflection for protocol validation
tokio-stream = "0.1"          # Async streams for gRPC testing

# Serialization for benchmarks
bincode = "1.3"               # Binary serialization benchmarking
flate2 = "1.0"                # Compression benchmarking
futures-util = "0.3"          # Async utilities for benchmarks

[features]
default = ["sqlite"]
sqlite = []
metrics = ["prometheus"]
test-utils = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
