[package]
name = "workspace-qdrant-core"
version = "0.2.1-debug"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "net", "process", "signal"] }
tracing = { version = "0.1", features = ["log", "attributes", "std"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Document processing  
notify = { version = "6.1", features = ["serde"] }
walkdir = "2.4"
glob = "0.3"
encoding_rs = "0.8"
chardet = "0.2"
mime_guess = "2.0"

# Additional core dependencies
once_cell = "1.19"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono", "json"] }
reqwest = { version = "0.11", features = ["stream", "json"] }
ahash = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
regex = "1.10"
which = "6.0"
qdrant-client = "1.15"
tokio-util = "0.7"
zip = "2.1"
epub = "2.0"
fastrand = "2.0"
clap = { version = "4.4", features = ["derive", "string"] }
scopeguard = "1.2"
tempfile = "3.8"

# ML/Embedding dependencies (optional - can be disabled)
ort = { version = "2.0.0-rc.10", features = ["download-binaries"], optional = true }
tokenizers = { version = "0.19", optional = true }

# Code parsing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-json = "0.20"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi", "minwinbase"] }

[features]
default = ["ml", "embeddings"]
ml = ["ort", "tokenizers"]
embeddings = ["ort", "tokenizers"]

[[bin]]
name = "memexd"
path = "src/bin/memexd.rs"