# Unified Rust Workspace for workspace-qdrant-mcp
#
# Build all binaries with: cargo build --release
# Outputs:
#   - target/release/wqm (CLI)
#   - target/release/memexd (daemon)

[workspace]
resolver = "2"
members = [
    "common",
    "common-node",
    "cli",
    "daemon/core",
    "daemon/grpc",
    "daemon/memexd",
    "daemon/shared-test-utils",
]

# Release profile: optimized for size and performance
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Release-small profile: maximum size optimization
[profile.release-small]
inherits = "release"
opt-level = "s"

# Development profile: fast compilation
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

# Cross-platform compilation targets
[workspace.metadata.cross-compilation]
targets = [
    "x86_64-apple-darwin",      # macOS Intel
    "aarch64-apple-darwin",     # macOS Apple Silicon
    "x86_64-unknown-linux-gnu", # Linux x86_64
    "aarch64-unknown-linux-gnu",# Linux ARM64
    "x86_64-pc-windows-msvc",   # Windows x86_64
    "aarch64-pc-windows-msvc",  # Windows ARM64
]

# Platform-specific optimization flags
[workspace.metadata.platform-flags]
macos = ["-C", "target-cpu=native", "-C", "link-arg=-Wl,-dead_strip"]
linux = ["-C", "target-cpu=native", "-C", "link-arg=-Wl,--gc-sections"]
windows = ["-C", "target-cpu=native"]

# Workspace-level dependencies that crates can inherit
[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.35", features = [
    "rt-multi-thread", "macros", "time", "fs", "process", "signal",
    "sync", "io-std", "io-util", "net", "parking_lot"
]}
tokio-util = { version = "0.7", features = ["codec", "time"] }
tokio-stream = "0.1"

# gRPC and networking
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
tonic-build = { version = "0.12", features = ["prost"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yml = "0.0.12"
toml = "0.8"

# Utilities and data structures
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = { version = "0.1", features = ["log", "attributes", "std"] }

# Platform-specific file watching
notify = { version = "6.1", features = ["serde"] }

# CLI framework
clap = { version = "4.4", features = ["derive", "string", "wrap_help", "cargo", "env"] }
clap_complete = "4.4"

# Output formatting
tabled = "0.15"
colored = "2.1"

# Platform utilities
dirs = "5.0"
which = "6.0"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Crypto
sha2 = "0.10"

# Testing dependencies (shared across workspace)
tokio-test = "0.4"
proptest = "1.4"
tempfile = "3.8"
serial_test = "3.0"
test-log = { version = "0.2", features = ["trace"] }
tracing-test = "0.2"
once_cell = "1.19"
regex = "1.10"
testcontainers = { version = "0.25", features = ["blocking"] }
testcontainers-modules = { version = "0.13" }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Patch fastembed to expose ONNX intra-op thread count control.
# Upstream hardcodes available_parallelism() which uses ALL CPU cores per session.
# This patch adds InitOptions.num_threads: Option<usize> (None = upstream behavior).
# Remove when fastembed upstream adds thread count support.
[patch.crates-io]
fastembed = { path = "patches/fastembed" }
